<resources>
    <string name="app_name">Task_10_SQLite_AsyncTask_Loader</string>
    <string name="txt_main_put_name">Name</string>
    <string name="txt_main_put_surname">Surname</string>
    <string name="txt_main_put_skype">Skype</string>
    <string name="txt_main_put_mail">Mail</string>
    <string name="txt_main_put_phone_number">Phone</string>
    <string name="txt_btn_main_save">SAVE</string>
    <string name="txt_btn_detail_save">SAVE</string>
    <string name="txt_details_put_name">NAME</string>
    <string name="txt_details_put_surname">SURNAME</string>
    <string name="txt_details_put_id">ID</string>
    <string name="txt_details_put_phone">PHONE</string>
    <string name="txt_details_put_skype">SKYPE</string>
    <string name="txt_details_put_mail">MAIL</string>
    <string name="name_activity_person_list">List Person</string>
    <string name="txt_detail_delete">DELETE</string>
    <string name="txt_menu_list_person">List Person</string>
    <string name="txt_menu_main_activity">Main</string>
    <string name="txt_list_menu_delete_all">Delete ALL</string>
    <string name="txt_list_main_activity">Follow list</string>
    <string name="txt_detail_menu_delete">Delete Person</string>
    <string name="txt_list_menu_main_activity">Main</string>
</resources>
