<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hammer.task_10_sqlite_asynctask_loader.ui.PersonDetailActivity">

    <TextView
        android:id="@+id/text_view_details_id"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/txt_details_put_id"/>
    <EditText
        android:id="@+id/text_view_details_name"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_details_id"
        android:hint="@string/txt_details_put_name"/>
    <EditText
        android:id="@+id/text_view_details_surname"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_details_name"
        android:hint="@string/txt_details_put_surname"/>
    <EditText
        android:id="@+id/text_view_details_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_details_surname"
        android:hint="@string/txt_details_put_phone"/>
    <EditText
        android:id="@+id/text_view_details_skype"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_details_phone"
        android:hint="@string/txt_details_put_skype"/>
    <EditText
        android:id="@+id/text_view_details_mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_view_details_skype"
        android:hint="@string/txt_details_put_mail"/>
    <Button
        android:id="@+id/btn_detail_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/txt_detail_delete"/>
    <Button
        android:id="@+id/btn_detail_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_detail_delete"
        android:text="@string/txt_btn_detail_save"/>

    </RelativeLayout>